# trace-shrink

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.cursor/rules/: project-overview.mdc  using-uv.mdc
.github/workflows/: ci.yml
api/: index.html
api/entries/: index.html
api/readers/: index.html
api/top-level/: index.html
api/writers/: index.html
docs/: api.md  index.md  usage.md
docs/api/: entries.md  readers.md  top-level.md  writers.md
scripts/: dai_insertions.py  requirements.txt  tvs_broadcast_stream.py
search/: search_index.json
src/abr_capture_snoop/: __init__.py  archive_reader.py  capture_entry.py  har_entry.py  har_reader.py  proxyman_entry.py  proxyman_log_reader.py
src/abr_capture_spy/: abr_formats.py  archive_reader.py  capture_entry.py  har_entry.py  har_reader.py  proxyman_entry.py  proxyman_log_reader.py
src/trace_shrink/: __init__.py  abr_formats.py  archive_reader.py  bodylogger_entry.py  bodylogger_reader.py  exporter.py  formats.py  har_entry.py  har_reader.py  har_writer.py  http_utils.py  manifest_stream.py  multifile_entry.py  multifile_reader.py  open_trace.py  (+8 more)
stylesheets/: extra.css
tests/: test_abr_detector.py  test_abr_formats.py  test_archive_modification.py  test_archive_reader.py  test_bodylogger_reader.py  test_cross_format_consistency.py  test_exporter.py  test_har_entry.py  test_har_reader.py  test_manifest_stream.py  test_multifile_archive.py  test_proxyman_entry.py  test_proxyman_log_reader.py  test_requests_entry.py  test_trace_reader.py
usage/: index.html
(+32 files in other folders)
