[project]
name = "trace-shrink"
version = "0.2.0"
description = "A tool to analyze captures of ABR streams (HAR or Proxyman)."
authors = [{ name = "Fabre Lambeau", email = "fabre.lambeau@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "yarl>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mkdocstrings]
default_handler = "python"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
